vix/tests/checker-corpus/reject/pattern-payload-mismatch.vix
enum Artifact {
    Object(Path),
}

fn main(a: Artifact) -> Int {
    match a {
        Artifact::Object(p, q) => 1,
    }
}
